--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Shopping Cart</string>
+    <string name="open_drawer">Shopping Cart</string>
+    <string name="close_drawer">Shopping Cart</string>
+    <string-array name="navigation_items">
+        <item>Toate Produsele</item>
+        <item>Magazine</item>
+        <item>Alerta Produs</item>
+    </string-array>
 </resources>
